# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 0f413e41b71e_added_user_model.py  14bf3bdd67b0_added_roles.py  6a3cd7765c07_init.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contact_repository_unit.py  test_integration_auth.py  test_integration_utils.py  test_intergation_contacts.py  test_intergation_users.py
