[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Dayout",email = "fearess7@gmail.com"}
]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
fastapi = ">=0.100.0"
dotenv = "^0.9.9"
email-validator = "^2.2.0"
uvicorn = "^0.34.1"
pydantic = ">=2.0"

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
